[gd_scene load_steps=5 format=3 uid="uid://cu4lavcewukdp"]

[ext_resource type="Texture2D" uid="uid://bv6dabgpn7ioy" path="res://icon.svg" id="1_3blia"]
[ext_resource type="Script" path="res://assets/scripts/characters/GoombaPatrol.gd" id="1_vkdl6"]
[ext_resource type="Script" path="res://assets/scripts/Health.gd" id="2_xraio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3t2a"]
size = Vector2(28, 28)

[node name="TraversalGoomba" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_vkdl6")
speed = 200.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.14441e-05, 3.8147e-06)
scale = Vector2(0.216406, 0.208188)
texture = ExtResource("1_3blia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d3t2a")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_xraio")

[node name="InvincibilityTimer" type="Timer" parent="Health"]
process_callback = 0
wait_time = 0.2

[node name="RightWall" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)
collision_mask = 128

[node name="LeftWall" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)
collision_mask = 128

[node name="RightGap" type="RayCast2D" parent="."]
position = Vector2(15, 11)
target_position = Vector2(0, 9)
collision_mask = 128

[node name="LeftGap" type="RayCast2D" parent="."]
position = Vector2(-15, 11)
target_position = Vector2(0, 9)
collision_mask = 128

[connection signal="timeout" from="Health/InvincibilityTimer" to="Health" method="_on_invincibility_timer_timeout"]
